# connogge

./: CMakeList.txt  CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md
include/glad/: glad.h
src/: main.cpp
src/core/: core.cpp  core.hpp
src/engine/: engine.cpp  engine.hpp
src/engine/graphics/: element_buffer.cpp  element_buffer.hpp  renderer.cpp  renderer.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  window.cpp  window.hpp
src/engine/image/: image_data.cpp  image_data.hpp  texture.cpp  texture.hpp
src/engine/mesh/: mesh.cpp  mesh.hpp
src/engine/screen/: camera.cpp  camera.hpp  camera_2d.cpp  camera_2d.hpp  camera_3d.cpp  camera_3d.hpp  window.cpp  window.hpp
src/engine/shader/: shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  shader_type.hpp
src/engine/system/: events.cpp  events.hpp  window.cpp
src/engine/utils/: file_utils.hpp  time.hpp  transformation.cpp  transformation.hpp  transformation_2d.cpp  transformation_2d.hpp  transformation_3d.cpp  transformation_3d.hpp  types.hpp
src/graphics/: Renderer.cpp  Renderer.hpp  window.cpp  window.hpp
src/main/: Connogge.cpp  Connogge.hpp  Engine.cpp  Engine.hpp  Time.cpp  Time.hpp  main.cpp  main.hpp  utils.hpp  window.cpp  window.hpp
